--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- i pray u find all of this easy , 
     practice well and read ur books too,
-     if u need any with ur studies at all , let me know alright-->
+     if u need any with ur studies at all , let me know-->
     <button type="button" class="btn btn-primary">Primary</button>
     
 
